--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
-        "@hapi/joi": "^16.1.7",
+        "@hapi/joi": "^17.1.0",
         "@nestjs/common": "^6.7.2",
         "@nestjs/core": "^6.7.2",
         "@nestjs/jwt": "^6.1.1",
@@ -50,6 +50,7 @@
         "@types/node": "^12.7.5",
         "@types/passport-jwt": "^3.0.2",
         "@types/supertest": "^2.0.8",
+        "eslint": "^6.8.0",
         "jest": "^24.9.0",
         "prettier": "^1.18.2",
         "supertest": "^4.0.2",
@@ -57,7 +58,6 @@
         "ts-loader": "^6.1.1",
         "ts-node": "^8.4.1",
         "tsconfig-paths": "^3.9.0",
-        "tslint": "^5.20.0",
         "typescript": "^3.6.3"
     },
     "jest": {
