--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
         "start:prod": "node dist/main",
-        "lint": "tslint -p tsconfig.json -c tslint.json",
+        "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
         "test": "jest",
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
@@ -21,16 +21,15 @@
     },
     "dependencies": {
         "@hapi/joi": "^17.1.0",
-        "@nestjs/common": "^6.7.2",
-        "@nestjs/core": "^6.7.2",
-        "@nestjs/jwt": "^6.1.1",
-        "@nestjs/passport": "^6.1.0",
-        "@nestjs/platform-express": "^6.8.5",
-        "@nestjs/typeorm": "^6.2.0",
-        "@types/hapi__joi": "^16.0.2",
+        "@nestjs/common": "^7.0.13",
+        "@nestjs/core": "^7.0.13",
+        "@nestjs/jwt": "^7.0.0",
+        "@nestjs/passport": "^7.0.0",
+        "@nestjs/platform-express": "^7.0.13",
+        "@nestjs/typeorm": "^7.0.0",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.2.3",
-        "class-validator": "^0.11.0",
+        "class-validator": "^0.12.2",
         "dotenv": "^8.2.0",
         "mysql2": "^2.0.0",
         "passport": "^0.4.0",
@@ -41,20 +40,25 @@
         "typeorm": "^0.2.20"
     },
     "devDependencies": {
-        "@nestjs/cli": "^6.9.0",
-        "@nestjs/schematics": "^6.7.0",
-        "@nestjs/testing": "^6.7.1",
+        "@nestjs/cli": "^7.0.0",
+        "@nestjs/schematics": "^7.0.0",
+        "@nestjs/testing": "^7.0.0",
         "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.1",
-        "@types/jest": "^24.0.18",
+        "@types/hapi__joi": "^17.1.0",
+        "@types/jest": "^25.1.4",
         "@types/node": "^12.7.5",
         "@types/passport-jwt": "^3.0.2",
         "@types/supertest": "^2.0.8",
-        "eslint": "^6.8.0",
-        "jest": "^24.9.0",
-        "prettier": "^1.18.2",
+        "@typescript-eslint/eslint-plugin": "^3.0.0",
+        "@typescript-eslint/parser": "^3.0.0",
+        "eslint": "^7.0.0",
+        "eslint-config-prettier": "^6.10.0",
+        "eslint-plugin-import": "^2.20.1",
+        "jest": "^25.1.0",
+        "prettier": "^2.0.5",
         "supertest": "^4.0.2",
-        "ts-jest": "^24.1.0",
+        "ts-jest": "^25.2.1",
         "ts-loader": "^6.1.1",
         "ts-node": "^8.4.1",
         "tsconfig-paths": "^3.9.0",
