--- a/package.json
+++ b/package.json
@@ -24,20 +24,20 @@
         "@nestjs/common": "^7.0.13",
         "@nestjs/core": "^7.0.13",
         "@nestjs/jwt": "^7.0.0",
+        "@nestjs/mongoose": "^7.0.1",
         "@nestjs/passport": "^7.0.0",
         "@nestjs/platform-express": "^7.0.13",
-        "@nestjs/typeorm": "^7.0.0",
         "bcryptjs": "^2.4.3",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
         "dotenv": "^8.2.0",
-        "mysql2": "^2.0.0",
+        "mongoose": "^5.9.19",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
+        "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.0",
-        "rxjs": "^6.5.3",
-        "typeorm": "^0.2.20"
+        "rxjs": "^6.5.3"
     },
     "devDependencies": {
         "@nestjs/cli": "^7.0.0",
@@ -47,9 +47,12 @@
         "@types/express": "^4.17.1",
         "@types/hapi__joi": "^17.1.0",
         "@types/jest": "^25.1.4",
+        "@types/mongoose": "^5.7.27",
         "@types/node": "^12.7.5",
         "@types/passport-jwt": "^3.0.2",
+        "@types/passport-local": "^1.0.33",
         "@types/supertest": "^2.0.8",
+        "@types/uuid": "^8.0.0",
         "@typescript-eslint/eslint-plugin": "^3.0.0",
         "@typescript-eslint/parser": "^3.0.0",
         "eslint": "^7.0.0",
