--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "scripts": {
         "prebuild": "rimraf dist",
         "build": "nest build",
-        "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+        "format": "prettier --write \"src/main/nest/**/*.ts\" \"src/test/**/*.ts\"",
         "start": "nest start",
         "start:dev": "nest start --watch",
         "start:debug": "nest start --debug --watch",
@@ -17,7 +17,7 @@
         "test:watch": "jest --watch",
         "test:cov": "jest --coverage",
         "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json"
+        "test:e2e": "jest --config ./src/test/jest-e2e.json"
     },
     "dependencies": {
         "@hapi/joi": "^17.1.0",
@@ -27,7 +27,7 @@
         "@nestjs/mongoose": "^7.0.1",
         "@nestjs/passport": "^7.0.0",
         "@nestjs/platform-express": "^7.0.13",
-        "bcryptjs": "^2.4.3",
+        "bcrypt": "^5.0.0",
         "class-transformer": "^0.2.3",
         "class-validator": "^0.12.2",
         "dotenv": "^8.2.0",
@@ -43,7 +43,7 @@
         "@nestjs/cli": "^7.0.0",
         "@nestjs/schematics": "^7.0.0",
         "@nestjs/testing": "^7.0.0",
-        "@types/bcryptjs": "^2.4.2",
+        "@types/bcrypt": "^3.0.0",
         "@types/express": "^4.17.1",
         "@types/hapi__joi": "^17.1.0",
         "@types/jest": "^25.1.4",
@@ -73,7 +73,7 @@
             "json",
             "ts"
         ],
-        "rootDir": "src",
+        "rootDir": "src/main/nest",
         "testRegex": ".spec.ts$",
         "transform": {
             "^.+\\.(t|j)s$": "ts-jest"
