--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "@hapi/joi": "^17.1.0",
         "@nestjs/common": "^7.0.13",
         "@nestjs/core": "^7.0.13",
-        "@nestjs/jwt": "^7.0.0",
         "@nestjs/mongoose": "^7.0.1",
         "@nestjs/passport": "^7.0.0",
         "@nestjs/platform-express": "^7.0.13",
@@ -34,7 +33,7 @@
         "dotenv": "^8.2.0",
         "mongoose": "^5.9.19",
         "passport": "^0.4.0",
-        "passport-jwt": "^4.0.0",
+        "passport-http-bearer": "^1.0.1",
         "passport-local": "^1.0.0",
         "reflect-metadata": "^0.1.13",
         "rimraf": "^3.0.0",
@@ -50,7 +49,7 @@
         "@types/jest": "^25.1.4",
         "@types/mongoose": "^5.7.27",
         "@types/node": "^12.7.5",
-        "@types/passport-jwt": "^3.0.2",
+        "@types/passport-http-bearer": "^1.0.35",
         "@types/passport-local": "^1.0.33",
         "@types/supertest": "^2.0.8",
         "@types/uuid": "^8.0.0",
