--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,7 @@
 {
-    "singleQuote": true,
-    "trailingComma": "all",
-    "tabWidth": 4,
-    "useTabs": true
+	"printWidth": 120,
+	"singleQuote": true,
+	"trailingComma": "all",
+	"tabWidth": 4,
+	"useTabs": true
 }
